src/test/resources/Parser/SyntaxErrors/UntypedFunctionAddress.front
class A:
    static generic <T,R> (t: T, r: R) {}

    test () {
        x := generic**;
    }